--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.6.8",
     "express": "^4.19.2",      
     "body-parser": "^1.20.2",   
-    "node-fetch": "^3.3.2" 
+    "node-fetch": "^3.3.2",
+    "cors": "^2.8.5"         // 💡 ይሄኛው ተጨምሯል
   }
 }
+
