--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "telegram-school-library-backend",
   "version": "1.0.0",
@@ -21,11 +20,11 @@
     "express": "^4.19.2",      
     "body-parser": "^1.20.2",
     "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"   <-- ይህ የጎደለው መስመር አሁን ታክሏል!
+    "cors": "^2.8.5"
   }
 }
 
-  
+
 
 
 
